Fix #2129 - [Bug]  Add a new CSS to underline all characters in labeling

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/becpg-report.css
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/becpg-report.css
@@ -1,6 +1,3 @@
-/*
- *  Copyright (C) 2010-2011 beCPG. All rights reserved.
- */
 
  /* ----- HEADER ----- */
  /* used*/
@@ -281,4 +278,9 @@
 
 .color-adress-website {
 	color:#126683;
+}
+
+/** labeling **/
+u {
+   text-underline-position: under;
 }
