--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -9769,25 +9769,51 @@
 				</appearance>
 			</form>
 			
+			<form id="packagingMaterial">
+				<field-visibility>
+					<show id="bcpg:svhcListIng" />
+					<show id="bcpg:svhcListQtyPerc" />
+					<show id="bcpg:svhcListMigrationPerc" />
+					<show id="bcpg:isManualListItem" force="true" />
+				</field-visibility>
+
+				<appearance>
+					<field id="bcpg:svhcListIng">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">
+								becpg/autocomplete/targetassoc/associations/bcpg:ing?filter=bcpg:isSubstanceOfVeryHighConcern%7Ctrue
+							</control-param>
+						</control>
+					</field>
+					<field id="bcpg:svhcListQtyPerc">
+						<control template="/org/alfresco/components/form/controls/number-unit.ftl">
+							<control-param name="unit">perc</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
+			
+			
+			<form id="datagrid-packagingMaterial">
+				<field-visibility>
+					<show id="bcpg:svhcListIng" />
+					<show id="bcpg:svhcListQtyPerc" />
+					<show id="bcpg:svhcListMigrationPerc" />
+					<show id="bcpg:svhcReasonsForInclusion" force="true" />
+					<show id="bcpg:isManualListItem" force="true" />
+				</field-visibility>
+			</form>
+			
 			<!-- Data Grid view -->
 			<form id="datagrid">
 				<field-visibility>
 					<show id="bcpg:svhcListIng" />
 					<show id="bcpg:svhcListQtyPerc" />
-					<show id="bcpg:isManualListItem" force="true" />
 					<show id="bcpg:svhcReasonsForInclusion" force="true" />
+					<show id="bcpg:isManualListItem" force="true" />
 				</field-visibility>
 			</form>
 
-			<form id="customListDatagrid">
-				<field-visibility>
-					<show id="bcpg:variantIds" force="true" />
-					<show id="bcpg:svhcListIng" />
-					<show id="bcpg:svhcListQtyPerc" />
-					<show id="bcpg:isManualListItem" force="true" />
-					<show id="bcpg:svhcReasonsForInclusion" force="true" />
-				</field-visibility>
-			</form>
 
 			<form id="filter">
 				<field-visibility>
@@ -9840,9 +9866,35 @@
 							<control-param name="unit">perc</control-param>
 						</control>
 					</field>
-					<field id="bcpg:isManualListItem" />
 				</appearance>
 			</form>
+			
+			<form id="packagingMaterial">
+				<field-visibility>
+					<show id="bcpg:svhcListIng" />
+					<show id="bcpg:svhcListQtyPerc" />
+					<show id="bcpg:svhcListMigrationPerc" />
+					<show id="bcpg:isManualListItem" force="true" />
+				</field-visibility>
+
+				<appearance>
+					<field id="bcpg:svhcListIng">
+						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+							<control-param name="ds">
+								becpg/autocomplete/targetassoc/associations/bcpg:ing?filter=bcpg:isSubstanceOfVeryHighConcern%7Ctrue
+							</control-param>
+						</control>
+					</field>
+					<field id="bcpg:svhcListQtyPerc">
+						<control template="/org/alfresco/components/form/controls/number-unit.ftl">
+							<control-param name="unit">perc</control-param>
+						</control>
+					</field>
+				</appearance>
+			</form>
+			
+			
+			
 		</forms>
 	</config>
 
