--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
@@ -114,6 +114,7 @@
 					<show id="survey:questionUpperNote" />
 					<show id="survey:questionLowerNote" />
 					<show id="survey:questionUrl" />
+					<show id="pjt:slCriterion" force="true"/>
 					<show id="survey:questionScore" />
 					
 					<show id="survey:responseType" />
@@ -163,6 +164,7 @@
 					<show id="survey:questionUpperNote" />
 					<show id="survey:questionLowerNote" />
 					<show id="survey:questionUrl" />
+					<show id="pjt:slCriterion" force="true"/>
 					<show id="survey:questionScore" />
 					
 					<show id="survey:responseType" />
@@ -220,6 +222,7 @@
 					
 					<show id="survey:responseCommentType" />
 					<show id="survey:responseCommentLabel" />
+					<show id="pjt:slCriterion" force="true"/>
 					<show id="survey:questionScore" />
 					<show id="survey:questionIsMandatory" />
 					<show id="survey:questionIsVisible" />
