--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -6072,6 +6072,9 @@
 					<show id="bcpg:costListUnit" />
 					<show id="bcpg:costListPreviousValue" />
 					<show id="bcpg:costListFutureValue" />
+					<show id="bcpg:costListFutureValue2" />
+					<show id="bcpg:costListFutureValue3" />
+					<show id="bcpg:costListFutureValue4" />
 					<show id="bcpg:costListValuePerProduct" />
 					<show id="bcpg:variantColumn1" force="true" />
 					<show id="bcpg:variantColumn2" force="true" />
