--- a/becpg-share/src/main/assembly/web/components/watson/watson.css
+++ b/becpg-share/src/main/assembly/web/components/watson/watson.css
@@ -30,7 +30,7 @@
 	-webkit-box-align: center;
 	-webkit-align-items: center;
 	align-items: center;
-	background: #4285f4;
+	background: var(--becpg-green);
 	cursor: pointer;
 	display: -webkit-box;
 	display: -webkit-flex;
@@ -104,7 +104,7 @@
 	min-height: 0;
 	min-width: 0;
 	position: fixed;
-	right: calc(var(--devsite-concierge-width, 0px)+ 25px);
+	right: 25px;
 	z-index: 1017
 }
 
@@ -122,7 +122,7 @@
 
 #watson-container.watson-chat-shifted, #watson-container.watson-chat-shifted,
 	#watson-container.watson-chat-shifted #watson-chatbot-container {
-	right: calc(var(--devsite-concierge-width, 0px)+ 95px)
+	right: 95px;
 }
 
 @media screen and (min-width:769px) {
@@ -158,7 +158,8 @@
 	pointer-events: auto;
 	width: 100%;
 	left: 0;
-	right: 0
+	right: 0;
+	position: relative;
 }
 
 #watson-container.transition.expanded #watson-chatbot-container #watson-chatbot-chat-activate-bar.transition
@@ -210,57 +211,6 @@
 	display: none
 }
 
-#watson-container .message-container {
-	background: #fff;
-	border-radius: 15px;
-	border: 1px solid #e1e2e2;
-	bottom: 0;
-	-webkit-box-shadow: 0 8px 15px 0 rgba(0, 0, 0, .2);
-	box-shadow: 0 8px 15px 0 rgba(0, 0, 0, .2);
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-webkit-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
-	margin-right: 70px;
-	max-width: 600px;
-	min-height: 40px;
-	padding: 10px 16px;
-	position: absolute;
-	right: 0
-}
-
-#watson-container .message-container.hidden {
-	display: none
-}
-
-#watson-container .message-container .message {
-	font-size: 16px;
-	min-width: 160px
-}
-
-#watson-container .message-container .close {
-	background-color: #fff;
-	border-radius: 50%;
-	-webkit-box-shadow: 0 1px 3px rgba(60, 64, 67, .3);
-	box-shadow: 0 1px 3px rgba(60, 64, 67, .3);
-	height: 24px;
-	left: 0;
-	margin: 0;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	text-align: center;
-	top: -30px;
-	width: 24px
-}
 
 #watson-chatbot-container {
 	background-color: #fff;
